--- a/MovieWebApplication/Views/CatalogMovies/Index.cshtml
+++ b/MovieWebApplication/Views/CatalogMovies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Task<List<Result>>
 @{
     Layout = null;
 }
@@ -8,9 +8,36 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Index</title>
 </head>
 <body>
-    <h4>HOLA</h4>
+    <div>
+        @foreach (var item in await Model)
+        {
+        <div class="table-responsive-sm">
+            <table class="table table-borderless table-hover">
+                <thead>
+                    <tr class="text-center">
+                        <th scope="col">Image</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Release Date</th>
+                        <th scope="col">Popularity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="text-center">
+                        <td> <img src="@item.Poster_Path" /></td>
+                        <td>@item.Title</td>
+                        <td>@item.Release_Date</td>
+                        <td>@item.Vote_Average</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+                   
+        }
+    </div>
+   
 </body>
 </html>
