--- a/MovieWebApplication/Views/CatalogMovies/DisplayDetails.cshtml
+++ b/MovieWebApplication/Views/CatalogMovies/DisplayDetails.cshtml
@@ -8,9 +8,48 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>DisplayDetails</title>
+    <title>Details</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="..css/styles.css" rel="stylesheet" />
 </head>
 <body>
-   <h3>@Model.Title</h3>
+    <section class="page-section portfolio" id="portfolio">
+        <div class="container">
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">@Model.Title</h2>
+
+            <!-- Portfolio Grid Items-->
+            <div class="row">
+                <!-- Portfolio Item 1-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                        <img class="img-fluid" src="@Model.Poster_Path" />
+                    </div>
+                </div>
+                <div class="align-content-xl-start text-body">
+                    <h3>Overview: @Model.Overview</h3>
+                </div>
+            </div>
+            @Html.ActionLink("Set as favorite", "", "CatalogMovies", new { title = Model.Title, overview = Model.Overview, post = Model.Poster_Path },
+                       new { @class = "btn btn-outline-success" })
+
+        </div>
+    </section>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Contact form JS-->
+    <script src="assets/mail/jqBootstrapValidation.js"></script>
+    <script src="assets/mail/contact_me.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
