--- a/MovieWebApplication/Views/CatalogMovies/Index.cshtml
+++ b/MovieWebApplication/Views/CatalogMovies/Index.cshtml
@@ -31,8 +31,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Catalog</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Favorites</a></li>
+                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Catalog", "Index", "CatalogMovies")</li>
+
+                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Favorites", "Index", "CatalogMovies")</li>
                 </ul>
             </div>
         </div>
