--- a/MovieWebApplication/Views/CatalogMovies/DisplayDetails.cshtml
+++ b/MovieWebApplication/Views/CatalogMovies/DisplayDetails.cshtml
@@ -31,9 +31,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Catalog","Index","CatalogMovies")</li>
+                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Catalog", "Index", "CatalogMovies")</li>
 
-                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Favorites","Index","CatalogMovies")</li>
+                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Favorites", "Index", "FavoriteMovies")</li>
                 </ul>
             </div>
         </div>
