--- a/MovieWebApplication/Views/CatalogMovies/Index.cshtml
+++ b/MovieWebApplication/Views/CatalogMovies/Index.cshtml
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Catalog", "Index", "CatalogMovies")</li>
 
-                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Favorites", "Index", "CatalogMovies")</li>
+                    <li class="nav-item mx-0 mx-lg-1">@Html.ActionLink("Favorites", "Index", "FavoriteMovies")</li>
                 </ul>
             </div>
         </div>
