--- a/MovieWebApplication/Views/FavoriteMovies/Index.cshtml
+++ b/MovieWebApplication/Views/FavoriteMovies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Result>
 @{
     Layout = null;
 }
@@ -9,7 +9,38 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="..css/styles.css" rel="stylesheet" />
 </head>
 <body>
+    <div class="container">
+        @foreach (var item in Model)
+        {
+        <table class="table table-hover text-center">
+            <thead>
+                <tr>
+                    <th scope="col" class="text-center">Number</th>
+                    <th scope="col" class="text-center">Title</th>
+                    <th scope="col" class="text-center">Rating</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"  class="text-center">@item.IdKey</th>
+                    <td class="text-center">@item.Title</td>
+                    <td class="text-center">@item.Vote_Average</td>
+                </tr>               
+            </tbody>
+        </table>
+        }
+    </div>
 </body>
 </html>
