updating details page

--- a/MovieWebApplication/Views/CatalogMovies/Index.cshtml
+++ b/MovieWebApplication/Views/CatalogMovies/Index.cshtml
@@ -23,8 +23,8 @@
             <div class="collapse navbar-collapse"
                  id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation">@Html.ActionLink("Catalog", "Index", "CatalogMovies")</li>
-                    <li class="nav-item" role="presentation">@Html.ActionLink("Favorites", "Index", "FavoriteMovies")</li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white">@Html.ActionLink("Catalog", "Index", "CatalogMovies")</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-white">@Html.ActionLink("Favorites", "Index", "FavoriteMovies")</a></li>
                 </ul>
             </div>
         </div>
