--- a/MovieWebApplication/Views/FavoriteMovies/Index.cshtml
+++ b/MovieWebApplication/Views/FavoriteMovies/Index.cshtml
@@ -9,38 +9,55 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="..css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 </head>
 <body>
-    <div class="container">
-        @foreach (var item in await Model)
-        {
-        <table class="table table-hover text-center">
-            <thead>
-                <tr>
-                    <th scope="col" class="text-center">Number</th>
-                    <th scope="col" class="text-center">Title</th>
-                    <th scope="col" class="text-center">Rating</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"  class="text-center">@item.IdKey</th>
-                    <td class="text-center">@item.Title</td>
-                    <td class="text-center">@item.Vote_Average</td>
-                </tr>               
-            </tbody>
-        </table>
-        }
-    </div>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
+        <div class="container">
+            <a class="navbar-brand logo" href="#">Movies</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse"
+                 id="navbarNav">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-grid-cards.html">Favorites</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="projects-no-images.html">Projects</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="page projets-page">
+        <section class="portfolio-block project-no-images">
+            <div class="container">
+                <div class="heading">
+                    <h2>Favorite movies</h2>
+                </div>
+                <div class="row">
+                    @foreach (var item in await Model)
+                    {
+                        <div class="col-md-6 col-lg-4">
+                            <div class="project-card-no-image">
+                                <h3>@item.Title</h3>
+                                <h4>@item.Release_Date</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                                <div class="tags"><a href="#">Python</a></div>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
+            <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
+        </div>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
+
 </html>
